<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/logo"/>

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_logo"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textColor="@color/royal_blue"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_name"
        android:layout_marginTop="70dp"
        android:padding="5dp"
        android:text="@string/txt_login"
        android:textAlignment="center"
        android:textColor="@color/royal_blue"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/account_logIn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/txt_login"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/ic_person"
        android:hint="@string/txt_account"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:padding="10dp" />

    <EditText
        android:id="@+id/password_logIn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/account_logIn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/ic_password1"
        android:hint="@string/txt_password"
        android:inputType="numberPassword"
        android:autofillHints="password"
        android:padding="10dp" />

    <TextView
        android:id="@+id/txt_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_logIn"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:text="@string/txt_register"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/txt_space"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_logIn"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@id/txt_register"
        android:gravity="center"
        android:text="@string/txt_space"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/txt_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_logIn"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@+id/txt_space"
        android:text="@string/txt_forgot"
        android:textSize="17sp" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@id/txt_forgot"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="120dp"
        android:backgroundTint="@color/royal_blue"
        android:padding="10dp"
        android:text="@string/txt_login"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>